Remove ExpectedException and @FixMethodOrder use, fix Javadoc comments (#88)